Created main pages. Login and Main demo activities

--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -14,6 +14,16 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Mission Control Center"
+        android:id="@+id/textView"
+        android:layout_alignBottom="@+id/appTitle"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="36dp" />
+
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
@@ -24,4 +34,5 @@
         android:layout_alignEnd="@+id/appTitle"
         android:layout_marginBottom="50dp"
         android:layout_alignStart="@+id/appTitle" />
+
 </RelativeLayout>
