--- a/app/src/main/res/layout/grid_project.xml
+++ b/app/src/main/res/layout/grid_project.xml
@@ -6,6 +6,7 @@
     android:layout_margin="4dp"
     android:layout_width="match_parent"
     android:layout_height="180dp"
+    android:transitionName="@string/gridToProject"
     card_view:cardCornerRadius="2dp"
     card_view:cardElevation="4dp">
 
