--- a/app/src/main/res/layout/mission_control_activity.xml
+++ b/app/src/main/res/layout/mission_control_activity.xml
@@ -26,11 +26,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v4.view.ViewPager
+        <FrameLayout
             android:id="@+id/missionControlActivityView"
             android:layout_width="match_parent"
             android:layout_height="fill_parent">
-        </android.support.v4.view.ViewPager>
+        </FrameLayout>
 
         <FrameLayout
             android:id="@+id/socketMenuContainerView"
