--- a/app/src/main/res/layout/fragment_slide_item.xml
+++ b/app/src/main/res/layout/fragment_slide_item.xml
@@ -6,6 +6,16 @@
     <TextView
         android:id="@+id/index"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@drawable/border" />
+
+    <WebView
+        android:id="@+id/webview"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="16" />
+
+
 
 </LinearLayout>
