--- a/app/src/main/res/layout/slide_note_item_fragment.xml
+++ b/app/src/main/res/layout/slide_note_item_fragment.xml
@@ -3,4 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/slideNoteTextView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Text hasn't been set yet"/>
+
 </LinearLayout>
